Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-258

Spaces should not be url encoded in partition keys

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 0.7
    • Impala 1.0
    • None
    • None

    Description

      Hive only selectively URL encodes characters in partition keys when creating directories on disk. This means that Impala can't correctly write to and read from partitions with spaces in the partition column.

      Attachments

        Activity

          People

            henryr Henry Robinson
            henryr Henry Robinson
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: