IMPALA-258: Make partition key string encoding Hive-compatible