be/src/util/url-coding.h
@@ -23,12 +23,19 @@ namespace impala {
 
 // Utility method to URL-encode a string (that is, replace special
 // characters with %<hex value in ascii>).
-void UrlEncode(const std::string& in, std::string* out);
-void UrlEncode(const std::vector<uint8_t>& in, std::string* out);
+// The optional parameter hive_compat controls whether we mimic Hive's
+// behaviour when encoding a string, which is only to encode certain
+// characters (excluding, e.g., ' ')
+void UrlEncode(const std::string& in, std::string* out, bool hive_compat = false);
+void UrlEncode(const std::vector<uint8_t>& in, std::string* out,
+    bool hive_compat = false);
 
 // Utility method to decode a string that was URL-encoded. Returns
 // true unless the string could not be correctly decoded.
-bool UrlDecode(const std::string& in, std::string* out);
+// The optional parameter hive_compat controls whether or not we treat
+// the strings as encoded by Hive, which means selectively ignoring
+// certain characters like ' '.
+bool UrlDecode(const std::string& in, std::string* out, bool hive_compat = false);
 
 // Utility method to encode input as base-64 encoded.  This is not
 // very performant (multiple string copies) and should not be used
